tests/error/0032.exl
true && 1
        ^ERROR
